--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "gulp": "^3.9.0",
+    "gulp-clean-css": "2.3.2",
+    "gulp-concat": "2.6.1",
     "gulp-rename": "1.2.2",
     "gulp-uglify": "2.0.0",
     "pump": "1.0.2",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "babel-preset-es2015": "^6.5.0"
+    "vinyl-source-stream": "^1.1.0"
   }
 }
